# basic_transform_grids

./: CMakeLists.txt  main.cpp  plotting.ipynb
TeX/: exp.tex  main.tex
TeX/biblio/: lib.bib
TeX/images/: Error_level_lines_const.eps  Error_level_lines_lin.eps  add_trac_direct_search.eps  add_trac_grad_impulse.eps  add_trac_grad_step.eps  comp_all_tube.eps  comp_complexity.eps  comp_grad_complexity.eps  comp_num_trac.eps  direct_problem2d.eps  direct_problem3d.eps  direct_search.eps  direct_search_edge_len.eps  errline_const.eps  errline_gauss.eps  errline_lin.eps  field_speed.eps  grad_const.eps  grad_gauss.eps  grad_impulse.eps  grad_impulse_edge_len.eps  grad_lin.eps  grad_step.eps  grad_step_edge_len.eps  grid_bfs.eps  grid_rebinding.eps  model_seismic_survey.eps  proj_grad_const.eps  proj_grad_gauss.eps  proj_grad_lin.eps  rank.eps  seismic_image.eps  set.eps  transform_edge.eps  tube.eps
include/: data_structures  direct_problem  inverse_problem  logger  testing
scr/include/: data_structures  direct_problem  inverse_problem  inverse_problem_grad  logger  testing
scr/unit_tests/: grad_test  logger
